--- a/app/views/damages/index.html.erb
+++ b/app/views/damages/index.html.erb
@@ -46,7 +46,7 @@
         <td><%= damage.date %></td>
         <td><%= damage.kilometers %></td>
         <td><%= damage.labor %></td>
-        <td><%= damage.expense.amount %></td>
+        <td><b><%= damage.expense.amount %> DH</b></td>
         <td>
           <%= link_to damage, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
