--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,6 +6,9 @@ ul, li {
   margin: 0;
   padding: 0;
 }
+h4 {
+  font-family: Roboto Slab, 'Open Sans', Arial, sans-serif;
+}
 .btn {
   &:focus, &:active {
     outline: none;
@@ -103,6 +106,9 @@ ul, li {
     background-color: #f1f1f1;
     color: #383838;
     font-size: 18px;
+    td:last-child {
+      text-align: left;
+    }
   }
   &:before {
     background: #6b7fa7;
@@ -130,7 +136,4 @@ ul, li {
   .alert {
     border-radius: 0;
   }
-}
-h4 {
-  font-family: Roboto Slab, 'Open Sans', Arial, sans-serif;
 }
