--- a/app/views/breaks/_form.html.erb
+++ b/app/views/breaks/_form.html.erb
@@ -44,10 +44,15 @@
 
     <% end %>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :starting_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :start_date, class: 'form-control' %>
+
+        <% if @break.start_date %>
+            <%= form.text_field :start_date, class: 'form-control', value: format_date(@break.start_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :start_date, class: 'form-control' %>
+        <% end %>
 
         <% if !@break.errors.messages[:'start_date'].empty?  %>
             <ul>
@@ -62,10 +67,15 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :end_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :end_date, class: 'form-control' %>
+
+        <% if @break.end_date %>
+            <%= form.text_field :end_date, class: 'form-control', value: format_date(@break.end_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :end_date, class: 'form-control' %>
+        <% end %>
 
         <% if !@break.errors.messages[:'end_date'].empty?  %>
             <ul>
