--- a/app/views/breaks/index.html.erb
+++ b/app/views/breaks/index.html.erb
@@ -38,7 +38,7 @@
         <td><%= b.start_date %></td>
         <td><%= b.end_date %></td>
         <td><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
-        <td><%= b.expense.amount %></td>
+        <td><b><%= b.expense.amount %> DH</b></td>
         <td>
           <%= link_to b, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
