--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -16,10 +16,16 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :birth_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.text_field :birth_date, class: 'form-control' %>
+
+        <% if @driver.birth_date %>
+            <%= form.text_field :birth_date, class: 'form-control', value: format_date(@driver.birth_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :birth_date, class: 'form-control' %>
+        <% end %>
+
         <% if !@driver.errors.messages[:'birth_date'].empty?  %>
             <ul>
               <% @driver.errors.messages[:'birth_date'].each do |message| %>
@@ -96,10 +102,16 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :starting_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :start_date, class: 'form-control' %>
+
+        <% if @driver.start_date %>
+            <%= form.text_field :start_date, class: 'form-control', value: format_date(@driver.start_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :start_date, class: 'form-control' %>
+        <% end %>
+
         <% if !@driver.errors.messages[:'start_date'].empty?  %>
             <ul>
               <% @driver.errors.messages[:'start_date'].each do |message| %>
@@ -112,10 +124,17 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :end_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :end_date, class: 'form-control' %>
+
+        <% if @driver.end_date %>
+            <%= form.text_field :end_date, class: 'form-control', value: format_date(@driver.end_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :end_date, class: 'form-control' %>
+        <% end %>
+
+
         <% if !@driver.errors.messages[:'end_date'].empty?  %>
             <ul>
               <% @driver.errors.messages[:'end_date'].each do |message| %>
