--- a/app/views/insurances/_form.html.erb
+++ b/app/views/insurances/_form.html.erb
@@ -50,10 +50,15 @@
 
     <% end %>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :starting_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :start_date, class: 'form-control' %>
+
+        <% if @insurance.start_date %>
+            <%= form.text_field :start_date, class: 'form-control', value: format_date(@insurance.start_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :start_date, class: 'form-control' %>
+        <% end %>
 
         <% if !insurance.errors.messages[:'start_date'].empty?  %>
             <ul>
@@ -68,11 +73,15 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label "#{t :expiration_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :expiration_date, class: 'form-control' %>
 
+        <% if @insurance.expiration_date %>
+            <%= form.text_field :expiration_date, class: 'form-control', value: format_date(@insurance.expiration_date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :expiration_date, class: 'form-control' %>
+        <% end %>
 
         <% if !insurance.errors.messages[:'expiration_date'].empty?  %>
             <ul>
