--- a/app/views/manager_takes/_form.html.erb
+++ b/app/views/manager_takes/_form.html.erb
@@ -20,10 +20,15 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label 'Date', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :date, class: 'form-control' %>
+
+        <% if @manager_take.date %>
+            <%= form.text_field :date, class: 'form-control', value: format_date(@manager_take.date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :date, class: 'form-control' %>
+        <% end %>
 
         <% if !@manager_take.errors.messages[:'date'].empty?  %>
             <ul>
@@ -61,14 +66,12 @@
           </div>
         </div>
 
-
         <div class="form-group row">
           <%= income_form.label "#{t :attached_file}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= income_form.file_field :attached_file %>
           </div>
         </div>
-
 
         <div class="form-group row">
           <%= income_form.label :description, class: 'col-sm-2 col-form-label' %>
