--- a/app/views/owner_takes/_form.html.erb
+++ b/app/views/owner_takes/_form.html.erb
@@ -20,10 +20,15 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row global_date">
       <%= form.label 'Date', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
-        <%= form.date_field :date, class: 'form-control' %>
+
+        <% if @owner_take.date %>
+            <%= form.text_field :date, class: 'form-control', value: format_date(@owner_take.date, "%Y-%m-%d", "%d/%m/%Y") %>
+        <% else %>
+            <%= form.text_field :date, class: 'form-control' %>
+        <% end %>
 
         <% if !@owner_take.errors.messages[:'date'].empty?  %>
             <ul>
