--- a/app/views/owner_takes/index.html.erb
+++ b/app/views/owner_takes/index.html.erb
@@ -1,3 +1,4 @@
+
 <h4><%= t :owner_takes %></h4>
 
 <!-- # -->
@@ -35,7 +36,7 @@
       <tr>
         <td><%= owner_take.owner.full_name %></td>
         <td><%= owner_take.date %></td>
-        <td><%= owner_take.expense.amount %></td>
+        <td><b><%= owner_take.expense.amount %> DH</b></td>
         <td>
           <%= link_to owner_take, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
