--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,13 @@
     <title>SmartCab</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_pack_tag 'application' %>
-    <%= javascript_pack_tag 'application' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application' %>
+
   </head>
 
-  <body>
+  <body data-locale="<%= I18n.locale %>">
 
     <!-- # Notice -->
     <%= render 'layouts/notices' %>
