--- a/app/views/break_causes/show.html.erb
+++ b/app/views/break_causes/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= "#{t :break_cause} - #{t :detail}" %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th>Cause</th>
