--- a/app/views/cab_models/index.html.erb
+++ b/app/views/cab_models/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="cab-model-data" class="table table-bordered">
+<table id="cab-model-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :model_name %></th>
