--- a/app/views/cabs/index.html.erb
+++ b/app/views/cabs/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="cab-data" class="table table-bordered">
+<table id="cab-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :cab_model %></th>
