--- a/app/views/cabs/show.html.erb
+++ b/app/views/cabs/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= t :vehicle %> - <%= t :detail %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th><%= t :license_plate %></th>
