--- a/app/views/damages/index.html.erb
+++ b/app/views/damages/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="damage-data" class="table table-bordered">
+<table id="damage-data" class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th>Cause</th>
