--- a/app/views/expenses/sub-pages/_breaks.html.erb
+++ b/app/views/expenses/sub-pages/_breaks.html.erb
@@ -12,7 +12,7 @@
       <!-- # -->
       <% if !Break.all.empty? %>
 
-        <table class="table table-bordered">
+        <table class="table table-bordered table-responsive">
           <thead>
           <tr>
             <th>Cause</th>
