--- a/app/views/expenses/sub-pages/_owner_takes.html.erb
+++ b/app/views/expenses/sub-pages/_owner_takes.html.erb
@@ -13,7 +13,7 @@
       <% if !OwnerTake.all.empty? %>
 
         <!-- # -->
-        <table class="table table-bordered">
+        <table class="table table-bordered table-responsive">
 
           <thead>
           <tr>
