--- a/app/views/fuel_types/show.html.erb
+++ b/app/views/fuel_types/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= "#{t :fuel_types} - #{t :detail}" %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th>Type</th>
