--- a/app/views/incomes/sub-pages/_manager_takes.html.erb
+++ b/app/views/incomes/sub-pages/_manager_takes.html.erb
@@ -11,7 +11,7 @@
 
       <!-- # -->
       <% if !ManagerTake.all.empty? %>
-          <table class="table table-bordered">
+          <table class="table table-bordered table-responsive">
 
         <thead>
           <tr>
