--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="insurance-data" class="table table-bordered">
+<table id="insurance-data" class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th><%= t :insurer %></th>
