--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>SmartCab</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+
     <%= csrf_meta_tags %>
     <%= stylesheet_pack_tag 'application' %>
 
