--- a/app/views/manager_takes/index.html.erb
+++ b/app/views/manager_takes/index.html.erb
@@ -20,7 +20,7 @@
 
 
 <!-- # -->
-<table id="manager-take-data" class="table table-bordered">
+<table id="manager-take-data" class="table table-bordered table-responsive">
 
   <thead>
     <tr>
