--- a/app/views/owner_takes/index.html.erb
+++ b/app/views/owner_takes/index.html.erb
@@ -20,7 +20,7 @@
 </div>
 
 <!-- # -->
-<table id="owner-take-data" class="table table-bordered">
+<table id="owner-take-data" class="table table-bordered table-responsive">
 
   <thead>
     <tr>
