--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="owner-data" class="table table-bordered">
+<table id="owner-data" class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th><%= t :full_name %></th>
