--- a/app/views/damage_types/index.html.erb
+++ b/app/views/damage_types/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="damage-type-data" class="table table-bordered">
+<table id="damage-type-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th>Name</th>
