--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="driver-data" class="table table-bordered">
+<table id="driver-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :full_name %></th>
