--- a/app/views/expenses/sub-pages/_insurances.html.erb
+++ b/app/views/expenses/sub-pages/_insurances.html.erb
@@ -12,7 +12,7 @@
       <!-- # -->
       <% if !Insurance.all.empty? %>
 
-        <table class="table table-bordered">
+        <table class="table table-bordered table-responsive">
           <thead>
           <tr>
             <th><%= t :insurer %></th>
