--- a/app/views/fuel_types/index.html.erb
+++ b/app/views/fuel_types/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="fuel-type-data" class="table table-bordered">
+<table id="fuel-type-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :name %></th>
