--- a/app/views/insurers/index.html.erb
+++ b/app/views/insurers/index.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <!-- # -->
-<table id="insurer-data" class="table table-bordered">
+<table id="insurer-data" class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :picture %></th>
