--- a/app/views/insurers/show.html.erb
+++ b/app/views/insurers/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= "#{t :insurer} - #{t :detail}" %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :picture %></th>
