--- a/app/views/owner_takes/show.html.erb
+++ b/app/views/owner_takes/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= "#{t :owner_takes} - #{t :detail}" %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :owner %></th>
