--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,6 +1,6 @@
 <h4><%= "#{t :owner} - #{t :detail}" %></h4>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-responsive">
   <thead>
   <tr>
     <th><%= t :full_name %></th>
