--- a/app/views/breaks/index.html.erb
+++ b/app/views/breaks/index.html.erb
@@ -1,15 +1,15 @@
 <h4><%= t :breaks %></h4>
 
 <!-- # -->
-<div class="actions row">
+<div class="actions form-inline">
 
-  <div class="col-md-4">
-    <%= link_to new_break_path, :class => 'btn btn-info btn-sm' do %>
+  <div class="col">
+    <%= link_to new_break_path, :class => 'btn btn-info btn-sm form-control' do %>
         <%= fa_icon 'plus' %> <%= t :add_a_new_break %>
     <% end %>
   </div>
 
-  <div class="col-md-4 ml-auto">
+  <div class="col">
     <input type="search"
            class="form-control"
            id="search-break"
@@ -19,26 +19,26 @@
 </div>
 
 <!-- # -->
-<table id="break-data" class="table table-bordered table-responsive">
+<table id="break-data" class="responsive-table">
   <thead>
     <tr>
-      <th>Cause</th>
-      <th><%= t :starting_date %></th>
-      <th><%= t :end_date %></th>
-      <th><%= t :delay %></th>
-      <th><%= t :amount %></th>
-      <th class="td-actions">Actions</th>
+      <th scope="col">Cause</th>
+      <th scope="col"><%= t :starting_date %></th>
+      <th scope="col"><%= t :end_date %></th>
+      <th scope="col"><%= t :delay %></th>
+      <th scope="col"><%= t :amount %></th>
+      <th scope="col" class="td-actions">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @breaks.each do |b| %>
       <tr>
-        <td><%= b.break_cause.name %></td>
-        <td><%= b.start_date %></td>
-        <td><%= b.end_date %></td>
-        <td><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
-        <td><b><%= b.expense.amount %> DH</b></td>
+        <th scope="row"><%= b.break_cause.name %></th>
+        <td data-title="<%= t :starting_date %>"><%= b.start_date %></td>
+        <td data-title="<%= t :end_date %>"><%= b.end_date %></td>
+        <td data-title="<%= t :delay %>"><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
+        <td data-title="<%= t :amount %>"><b><%= b.expense.amount %> DH</b></td>
         <td>
           <%= link_to b, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
