--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -83,6 +83,28 @@
         padding: 0;
       }
     }
+    .responsive-table {
+      td {
+        padding: 12px;
+        border-bottom: 1px solid #e0e0e0;
+        &:last-child {
+          background: #e8e8e8;
+        }
+      }
+    }
+    .title-header {
+      > div {
+        text-align: center;
+      }
+      b {
+        float: initial;
+        display: block;
+        margin-top: 12px;
+        font-size: 15px;
+      }
+    }
   }
+
+
 
 }
